# shadowpilot

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  txtx.yml
apps/web/: .env.example  .env.local  env.local  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: auth-identity-avatar.tsx  auth-session-card.tsx  buyer-console.tsx  confidential-review-panel.tsx  console-section-tabs.tsx  demo-mission-provider.tsx  integration-badge.tsx  live-network-overview.tsx  live-rover-grid.tsx  local-video-capture-panel.tsx  mission-activity-feed.tsx  mission-canvas.tsx  mission-control-strip.tsx  overview-console.tsx  pilot-capture-workspace.tsx  pilot-console.tsx  pilot-teleop-workspace.tsx  privacy-pill.tsx  rover-grid.tsx  rover-simulator.tsx  shadowpilot-auth-provider.tsx  site-header.tsx  status-pill.tsx  task-access-link-panel.tsx  task-flow-panel.tsx  task-lane-pill.tsx  viewer-identity-panel.tsx  workspace-auth-control.tsx  workspace-landing-panel.tsx  workspace-role-gate.tsx  workspace-shell.tsx  world-id-status-card.tsx
apps/web/src/hooks/: use-confidential-review.ts  use-shadowpilot-program.ts  use-submission-manifest.ts  use-submission-video.ts  use-wallet-balance.ts
circuits/scoring/: README.md
docs/: architecture.md  demo-script.md  pitch-video-runway.md
programs/shadowpilot/: Cargo.toml
programs/shadowpilot/src/: lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/devnet/: bootstrap.mjs
(+30 files in other folders)
