[package]
name = "shadowpilot"
version = "0.1.0"
description = "Anchor program for ShadowPilot fallback tasks, escrow, and session receipts."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowpilot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "allow" }

